--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
      <!--SET UP CONTAINER-->
     <div class="container">
       <!-- ADD JUMBOTRON-->
-      <div class="jumbotron text-center">
+      <div class="jumbotron text-center" style = "background-color:#900C3F;">
         <!--ADD MAIN TEXT-->
-        <h1>Mission to Mars</h1>
+        <h1 style="color:white;">Mission to Mars</h1>
         <!-- Add a button to activate scraping -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/scrape" style="background-color:#E91A4B;border:1px solid#E91A4B;" role="button"><span class="glyphicon glyphicon-refresh"></span>Scrape New Data</a></p>
       </div>
 
       <!-- MARS NEWS SECTION-->
@@ -68,13 +68,19 @@
         </div>
         
         {% for hemisphere in mars.hemisphere_data %}
-        <div class="col-md-6">
-          <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
-            <div class="caption">
-              <h3>{{hemisphere.title}}</h3>
+        <div class="col-xs-6 col-md-3">
+          <figure class="img-responsive">
+            <div class="thumbnail">
+              <a href="{{hemisphere.img_url}}" target = "_blank">
+                <div>
+                  <img src="{{hemisphere.img_url}}" class="img-responsive" alt = "Responsive image" style = "width:100%">
+                  <br>
+                  <figcaption style ="text-align: left;">{{hemisphere.title}}</figcaption>
+                  <br>
+                </div>
+              </a>
             </div>
-          </div>
+        </figure>
         </div>
         {% endfor %}
       </div>
